--- a/index.html
+++ b/index.html
@@ -4,15 +4,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Title, replace me!</title>
+    <title>Game Hub</title>
+    <meta name="description" content="">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 </head>
 
-<body class="centered">
-    <div>
-        <img src="/assets/images/noroff-logo.png" alt="Noroff Logo">
-        <h1>Hello World!</h1>
-    </div>
+<body>
+    <div class="top-bar">invincible</div>
+    <header>
+        <section class="top">
+            <div class="logo-container">
+                <a href="index.html"><img src="../assets/images/Game Hub logo.png" class="web-logo" alt="Game Hub logo"></a>
+                <nav class="cart-hamburger">
+                    <ul>
+                        <li><a href="html/Cart.html"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <path d="M2 2H10L15.36 28.78C15.5429 29.7008 16.0438 30.5279 16.7751 31.1166C17.5064 31.7053 18.4214 32.018 19.36 32H38.8C39.7386 32.018 40.6536 31.7053 41.3849 31.1166C42.1162 30.5279 42.6171 29.7008 42.8 28.78L46 12H12M20 42C20 43.1046 19.1046 44 18 44C16.8954 44 16 43.1046 16 42C16 40.8954 16.8954 40 18 40C19.1046 40 20 40.8954 20 42ZM42 42C42 43.1046 41.1046 44 40 44C38.8954 44 38 43.1046 38 42C38 40.8954 38.8954 40 40 40C41.1046 40 42 40.8954 42 42Z" stroke="#1E1E1E" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg></a> </li>
+                        <li><img src="assets/images/hamburger menu icon.png" alt="non-functional hamburger menu icon"</li>
+                    </ul>
+                </nav>
+            </div>
+        </section>  
+    </header>
+    <main>
+        <div class="h1-bar">
+            <h1>TOP PICKS</h1>
+        </div>
+        <section class="game-gallery">
+            <div class="game-poster">
+                <img src="assets/images/assassin.jpg" alt="gametxt">
+            </div>
+            <div class="game-poster">
+                <img src="assets/images/Furious.jpg" alt="gametxt">
+            </div>
+            <div class="game-poster">
+                <img src="assets/images/boxer.jpg" alt="gametxt">
+            </div>
+            <div class="game-poster">
+                <img src="assets/images/SpaceWar.jpg" alt="gametxt">
+            </div>
+            <div class="game-poster">
+                <img src="assets/images/CyberPunk.jpg" alt="gametxt">
+            </div>
+        </section>
+        <div class="new-releases-bar">
+             <h2 class="new-rel-bar">NEW RELEASES</h2>
+        </div>
+        <section class="main-page-game-list">
+            <section class="super-duper">
+                <h2>SUPER DUPER</h2>
+                <img src="assets/images/SuperDuper.jpg" class="game-poster" alt="cover of super Duper">
+                <p class="game-des">Super Duper is a fast-paced and humorous party game where players compete in wild mini-games with a fun retro theme.
+                    With simple controls and colorful graphics, the game challenges you to master everything from rhythm-based dancing
+                to chaotic obstacle courses. 
+                Collect points, beat your friends, and become the ultimate party champion! 
+                Perfect for a night of laughter and fun, whether playing solo or with friends in multiplayer mode.</p>
+                <a href="html/Cart.html" class="cta-addcart-button">ADD To CART <br> BUY NOW</a>
+                <p class="pricing">EST TOTAL 24.99 USD</p>
+            </section>
+            <section class="black">
+                <h2>BLACK</h2>
+                <img src="assets/images/Black.jpg" class="game-poster">
+                <p class="game-des">Black is a gripping stealth-action game where you play as a rogue assassin, navigating a dark, dystopian world. Cloaked in mystery, 
+                    your mission is to take down powerful enemies while unraveling a hidden conspiracy that threatens the entire world. 
+                    With stealth mechanics, tactical combat, and a rich narrative, you must rely on cunning, strategy, and brutal efficiency to survive. 
+                    Featuring dynamic weather, eerie environments, and heart-pounding missions, Black challenges players to embrace
+                    the shadows, making every decision count in this high-stakes, mature-rated adventure.</p>
+                <a class="cta-addcart-button">ADD TO CART <br> BUY NOW</a>
+                <p class="pricing">EST TOTAL 34.99 USD</p>
+            </section>
+            <section class="racing">
+                <h2>RACING</h2>
+                <img src="assets/images/Racing.jpg" class="game-poster">
+                <p class="game-des">Dive into the fast-paced, adrenaline-fueled world of "RACING," a groundbreaking racing game that combines high-octane
+                    action with stunning visuals and innovative gameplay mechanics. Set in a sprawling, open-world environment that seamlessly blends 
+                    urban landscapes, rural tracks, and extreme terrains, "RACING" challenges players to push the limits of speed while 
+                    mastering the art of strategic racing.</p>
+                <a class="cta-addcart-button">ADD TO CART <br> BUY NOW</a>
+                <p class="pricing">EST TOTAL 34.99 USD</p>
+            </section>
+            <section class="forge-legend">
+                <h2>FORGE LEGEND</h2>
+                <img src="assets/images/ForgeLegend.jpg" class="game-poster">
+                
+                <p class="game-des">Step into the enchanting world of Forge Legend, a medieval fantasy RPG where ancient magic, mythical creatures, and the secrets 
+                    of the forge intertwine. Set in the mystical realm of Eldoria, a land once shaped by the elves, players embark on a journey 
+                    through vast, magical forests, towering mountains, and sunken ruins, uncovering the deep lore of an ancient civilization.</p>
+                <a class="cta-addcart-button">ADD TO CART <br> BUY NOW</a>
+                <p class="pricing">EST TOTAL 34.99 USD</p>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <div class="invincible">invincible</div>
+        <section class="bottom">
+            <a href="index.html"><img src="../assets/images/Game Hub logo.png" class="web-logo-bottom" alt="Game Hub logo"></a>
+            <div class="games-catalogue">
+                <h2 class="BROWSE">BROWSE ALL GAMES <br> <a href="html/Catalogue.html" class="FC-button">Full Catalogue</a></h2>   
+            </div>       
+        </section>
+        <nav class="bottom-nav-bar">
+            <ul class="nav-content">
+                <li><a href="html/About.html">ABOUT</a></li>
+                <li><a href="html/Contact.html">CONTACT</a></li>
+                <li><a href="html/About.html">SUPPORT</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 
 </html>
