--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <section class="top">
             <div class="logo-container">
-                <a href="index.html"><img src="../assets/images/Game Hub logo.png" class="web-logo" alt="Game Hub logo"></a>
+                <a href="index.html"><img src="./assets/images/Game Hub logo.png" class="web-logo" alt="Game Hub logo"></a>
                 <nav class="cart-hamburger">
                     <ul>
                         <li><a href="html/Cart.html"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
@@ -103,7 +103,7 @@
     <footer>
         <div class="invincible">invincible</div>
         <section class="bottom">
-            <a href="index.html"><img src="../assets/images/Game Hub logo.png" class="web-logo-bottom" alt="Game Hub logo"></a>
+            <a href="index.html"><img src="/assets/images/Game Hub logo.png" class="web-logo-bottom" alt="Game Hub logo"></a>
             <div class="games-catalogue">
                 <h2 class="BROWSE">BROWSE ALL GAMES <br> <a href="html/Catalogue.html" class="FC-button">Full Catalogue</a></h2>   
             </div>       
