--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <footer>
         <div class="invincible">invincible</div>
         <section class="bottom">
-            <a href="index.html"><img src="/assets/images/Game Hub logo.png" class="web-logo-bottom" alt="Game Hub logo"></a>
+            <a href="index.html"><img src="assets/images/Game Hub logo.png" class="web-logo-bottom" alt="Game Hub logo"></a>
             <div class="games-catalogue">
                 <h2 class="BROWSE">BROWSE ALL GAMES <br> <a href="html/Catalogue.html" class="FC-button">Full Catalogue</a></h2>   
             </div>       
