--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <section class="top">
             <div class="logo-container">
-                <a href="index.html"><img src="./assets/images/Game Hub logo.png" class="web-logo" alt="Game Hub logo"></a>
+                <a href="index.html"><img src="assets/images/Game Hub logo.png" class="web-logo" alt="Game Hub logo"></a>
                 <nav class="cart-hamburger">
                     <ul>
                         <li><a href="html/Cart.html"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
