--- a/html/About.html
+++ b/html/About.html
@@ -50,7 +50,7 @@
         <section class="bottom">
             <a href="index.html"><img src="../assets/images/Game Hub logo.png" class="web-logo-bottom" alt="Game Hub logo"></a>
             <div class="games-catalogue">
-                <h2 class="BROWSE">BROWSE ALL GAMES <br> <a href="html/Catalogue.html" class="FC-button">Full Catalogue</a></h2>   
+                <h2 class="BROWSE">BROWSE ALL GAMES <br> <a href="Catalogue.html" class="FC-button">Full Catalogue</a></h2>   
             </div>       
         </section>
         <nav class="bottom-nav-bar">
