--- a/html/Catalogue.html
+++ b/html/Catalogue.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <div class="h1-bar">
-            <h1>TOP PICKS</h1>
+            <h1 class="Catalogue-h1">TOP PICKS</h1>
         </div>
        
         <section class="full-catalogue">
