--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <div class="h1-bar">
-            <h1>TOP PICKS</h1>
+            <h1 class="index-h1">TOP PICKS</h1>
         </div>
         <section class="game-gallery" id="gameGallery">
             <div class="game-poster">
@@ -68,7 +68,6 @@
                 to chaotic obstacle courses. 
                 Collect points, beat your friends, and become the ultimate party champion! 
                 Perfect for a night of laughter and fun, whether playing solo or with friends in multiplayer mode.</p>
-                <a href="html/Cart.html" class="cta-addcart-button">ADD To CART <br> BUY NOW</a>
                 <p class="pricing">EST TOTAL: <span id="price">USD</span></p>
             </section>
             <section class="black">
@@ -79,7 +78,7 @@
                     With stealth mechanics, tactical combat, and a rich narrative, you must rely on cunning, strategy, and brutal efficiency to survive. 
                     Featuring dynamic weather, eerie environments, and heart-pounding missions, Black challenges players to embrace
                     the shadows, making every decision count in this high-stakes, mature-rated adventure.</p>
-                <a class="cta-addcart-button">ADD TO CART <br> BUY NOW</a>
+
                 <p class="pricing">EST TOTAL 34.99 USD</p>
             </section>
             <section class="racing">
@@ -89,7 +88,7 @@
                     action with stunning visuals and innovative gameplay mechanics. Set in a sprawling, open-world environment that seamlessly blends 
                     urban landscapes, rural tracks, and extreme terrains, "RACING" challenges players to push the limits of speed while 
                     mastering the art of strategic racing.</p>
-                <a class="cta-addcart-button">ADD TO CART <br> BUY NOW</a>
+
                 <p class="pricing">EST TOTAL 34.99 USD</p>
             </section>
             <section class="forge-legend">
@@ -99,7 +98,7 @@
                 <p class="game-des">Step into the enchanting world of Forge Legend, a medieval fantasy RPG where ancient magic, mythical creatures, and the secrets 
                     of the forge intertwine. Set in the mystical realm of Eldoria, a land once shaped by the elves, players embark on a journey 
                     through vast, magical forests, towering mountains, and sunken ruins, uncovering the deep lore of an ancient civilization.</p>
-                <a class="cta-addcart-button">ADD TO CART <br> BUY NOW</a>
+
                 <p class="pricing">EST TOTAL 34.99 USD</p>
             </section>
         </section>
