--- a/html/Contact.html
+++ b/html/Contact.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <div class="h1-bar">
-            <h1>SUPPORT</h1>
+            <h1 class="contact-h1">SUPPORT</h1>
         </div>
         <section class="SUPPORT-OVERVIEW">
             <h2>POLICIES</h2>
